welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: '(' expected but identifier found.
		if nums(k) == value {
                   ^indexOfValue:9: error: illegal start of simple expression
	}
        ^